Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.871 devel

****  Fix comma-instantiations with parameters, bug884. [Franck Jullien]


* Verilator 3.870 2015-02-12

****  Suppress COMBDLY when inside always_latch, bug864. [Iztok Jeras]

****  Support cast operator with expression size, bug865. [Iztok Jeras]

****  Add warning on slice selection out of bounds, bug875. [Cong Van Nguyen].

****  Fix member select error broke in 3.868, bug867. [Iztok Jeras]

****  Fix $sccanf from string, bug866. [David Pierce]

****  Fix VM_PARALLEL_BUILDS broke in 3.868, bug870. [Hiroki Honda]

****  Fix non-ANSI modport instantiations, bug868. [Kevin Thompson]

****  Fix UNOPTFLAT change detect on multidim arrays, bug872. [Andrew Bardsley]

****  Fix slice connections of arrays to ports, bug880. [Varun Koyyalagunta]

****  Fix mis-optimizing gate assignments in unopt blocks, bug881. [Mike Thyer]

****  Fix sign extension of pattern members, bug882. [Iztok Jeras]

****  Fix clang compile warnings.


* Verilator 3.868 2014-12-20

**    New verilator_coverage program added to replace SystemPerl's vcoverage.

**    PSL support was removed, please use System Verilog assertions.

**    SystemPerl mode is deprecated and now untested.

***   Support enum.first/name and similar methods, bug460, bug848.

***   Add 'string' printing and comparisons, bug746, bug747, etc.

***   Inline C functions that are used only once, msg1525. [Jie Xu]

***   Fix tracing SystemC signals with structures, bug858. [Eivind Liland]
      Note that SystemC traces will no longer show the signals
      in the wrapper, they can be seen one level further down.

****  Add --stats-vars, bug851. [Jeremy Bennett]

****  Fix bare generates in interfaces, bug789. [Bob Newgard]

****  Fix underscores in real literals, bug863. [Jonathon Donaldson]


* Verilator 3.866 2014-11-15
