@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix comma-instantiations with parameters, bug884. [Franck Jullien]
 
+****  Fix SystemC arrayed bit vectors, bug886. [David Poole]
+
 
 * Verilator 3.870 2015-02-12
 
